--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.7.3"
   }
