--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pelaopro-landing",
+  "name": "@aadps123/pelaopro-landing",
   "type": "module",
   "version": "1.0.0",
   "scripts": {
