--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@aadps123/pelaopro-landing",
   "type": "module",
   "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
