--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "@aadps123/pelaopro-landing",
-  "type": "module",
+  "name": "pelaopro",
   "version": "1.0.0",
-  "publishConfig": {
-    "access": "public"
-  },
+  "type": "module",
+  "description": "Landing page del proyecto Pelao'Pro 🎯",
+  "main": "index.js",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "astro preview"
   },
+  "keywords": [
+    "pelaopro",
+    "landing",
+    "astro",
+    "educación",
+    "startup"
+  ],
+  "author": "Aaron De Puy",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Aadps123/pelaopro-landing.git"
+  },
+  "homepage": "https://pelaopro.vercel.app",
   "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.7.3",
-    "tailwind": "^2.3.1"
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
