--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://pelaopro.vercel.app",
   "dependencies": {
-    "astro": "^5.7.3",
     "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0"
+    "@vercel/speed-insights": "^1.2.0",
+    "astro": "^5.7.3",
+    "nodemailer": "^6.10.1",
+    "resend": "^4.4.1"
   },
   "publishConfig": {
     "access": "public"
