--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "homepage": "https://pelaopro.vercel.app",
   "dependencies": {
+    "@astrojs/react": "^4.2.5",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.7.3",
     "nodemailer": "^6.10.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "resend": "^4.4.1"
   },
   "publishConfig": {
